--- a/Tutorials/curso/src/main/resources/static/users.html
+++ b/Tutorials/curso/src/main/resources/static/users.html
@@ -387,17 +387,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>Tiger Nixon</td>
-                                            <td>System Architect</td>
-                                            <td>Edinburgh</td>
-                                            <td>61</td>
-                                            <td>
-                                                <button class="btn btn-danger btn-circle btn-sm">
-                                                    <i class="fas fa-trash"></i>
-                                                </button>
-                                            </td>
-                                        </tr>
+                                        <!--Here goes the code builded with javascript-->
                                     </tbody>
                                 </table>
                             </div>
