modified to register user

--- a/Tutorials/curso/src/main/resources/static/register.html
+++ b/Tutorials/curso/src/main/resources/static/register.html
@@ -61,9 +61,9 @@
                                             id="password_confirm" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <button class="btn btn-primary btn-user btn-block" onclick="registerUser()">
+                                <a onclick="registerUser()" class="btn btn-primary btn-user btn-block" href="#">
                                     Register Account
-                                </button>
+                                </a>
 
                             </form>
                             <hr>
