--- a/Tutorials/curso/src/main/resources/static/login.html
+++ b/Tutorials/curso/src/main/resources/static/login.html
@@ -57,7 +57,7 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small">Create an Account!</a>
+                                        <a href="register.html" class="small">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
